--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="[А-ЯЁа-яё]+(-[А-ЯЁа-яё]+)?" minlength="2" maxlength="20" placeholder="Имя" required />
+                        <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ][а-яё]+(-[А-ЯЁ][а-яё]+)?" minlength="2" maxlength="20" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="email" pattern="([a-zA-Z-_\d]+)@([a-zA-z-_\d]+).([a-zA-z-_\d]+)(.[a-zA-z-_\d]+)?" placeholder="E-Mail" required />
+                        <input class="form__input" type="text" name="email" pattern="[a-zA-Z-_.\d]+@[a-zA-z-_\d]+\.[a-zA-z-_\d]+(\.[a-zA-z-_\d]+)?" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
@@ -31,7 +31,7 @@
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="url" pattern="((http)|(https))://(www.)?(((\d{1,3}.){3}\d{1,3})|([A-Za-z\d\-_]+.[A-Za-z\d]{1,3}))(:\d{1,5})?([a-zA-Z/\d#]{2,})?" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="text" name="url" pattern="((http)|(https))://(www.)?(((\d{1,3}.){3}\d{1,3})|([A-Za-z\d\-_]+.[A-Za-z\d]{1,3}))(:([0-9]|[1-9][0-9]|[1-9][0-9][0-9]|[1-9][0-9][0-9][0-9]|[1-6][0-5][0-5][0-3][0-5]))?((/([a-zA-Z\d#]+))+)?/?" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="text">Отправить</button>
